--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Auryn - URL Manager</title>
     <style>
+
+        
         :root {
             --lavender-web: #d8d8f6ff;
             --african-violet: #b18fcfff;
@@ -25,6 +27,7 @@
         }
 
         body {
+            z-index: 999999; /* very high value to be above most overlays */
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 20px;
